- MFH Fixed Bug #29538 number_format and problem with 0

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@216486 c90b9560-bf6c-de11-be94-00142212c4b1